--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
         .form-container h2 {
             margin: 0 0 20px;
             font-size: 24px;
-            color: #ffcc00;
+            color: cyan; /* Changed to cyan */
         }
         .form-group {
-            margin-bottom: 10px;
+            margin-bottom: 10px; /* Reduced margin */
         }
         .form-group input {
             width: 100%;
-            padding: 10px;
+            padding: 8px; /* Reduced padding */
             border: 1px solid #ddd;
             border-radius: 5px;
             background-color: #444;
             color: white;
-            font-size: 13px;
+            font-size: 14px; /* Reduced font size */
         }
         .form-group input::placeholder {
             color: #bbb;
         }
         .attack-btn {
             width: 100%;
-            padding: 7px;
+            padding: 8px; /* Reduced padding */
             background-color: #dc3545;
             color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 10px;
+            font-size: 16px; /* Reduced font size */
             transition: background-color 0.3s, transform 0.2s;
         }
         .attack-btn:hover {
@@ -77,6 +77,11 @@
             font-size: 14px;
             color: #00bfff;
         }
+        .success-message {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #00ff00; /* Success message color */
+        }
     </style>
 </head>
 <body>
@@ -89,7 +94,8 @@
             <input type="number" id="amount" placeholder="Amount">
         </div>
         <button class="attack-btn" onclick="sendRequests()">ATTACK</button>
-        <a href="mailto:owner@example.com" class="contact-link">Contact Site Owner</a>
+        <div class="success-message" id="successMessage"></div> <!-- Added success message div -->
+        <a href="https://www.facebook.com/AlpHaRisHaD.33" class="contact-link">Contact Site Owner</a> <!-- Updated link to Facebook -->
         <div class="footer">Made By Sabuj💚</div>
     </div>
 
@@ -97,6 +103,7 @@
         async function sendRequests() {
             const phoneNumber = document.getElementById('phoneNumber').value;
             const amount = document.getElementById('amount').value;
+            const successMessage = document.getElementById('successMessage');
 
             if (!phoneNumber || !amount) {
                 alert('Enter both fields.');
@@ -118,7 +125,7 @@
                 }
             }
 
-            alert(`Successful requests: ${successCount}/${amount}`);
+            successMessage.textContent = `Successful requests: ${successCount}/${amount}`; // Display success message
         }
     </script>
 </body>
