--- a/index.html
+++ b/index.html
@@ -2,130 +2,171 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="DANGEROUS BOMBING SITE">
+    <meta name="author" content="RS RISHAD SABUJ">
     <title>RS BOMBER</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+        :root {
+            --background-color: rgb(4, 4, 4);
+            --box-background: rgb(7, 7, 7);
+            --shadow-color: rgb(89, 89, 89);
+            --heading-color: cyan;
+            --text-color: cyan;
+            --font-size: 20px;
+            --border-color: cyan;
+            --button-hover: cyan;
+        }
+
+        * {
             margin: 0;
-            background-color: navy;
-            color: white;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-        .form-container {
-            background-color: #2c2c2c;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
-            max-width: 400px;
-            width: 100%;
-            text-align: center;
+
+        body {
+            background-color: var(--background-color);
         }
-        .form-container h2 {
-            margin: 0 0 20px;
-            font-size: 24px;
-            color: cyan; /* Changed to cyan */
-        }
-        .form-group {
-            margin-bottom: 10px; /* Reduced margin */
-        }
-        .form-group input {
-            width: 100%;
-            padding: 8px; /* Reduced padding */
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #444;
-            color: white;
-            font-size: 14px; /* Reduced font size */
-        }
-        .form-group input::placeholder {
-            color: #bbb;
-        }
-        .attack-btn {
-            width: 100%;
-            padding: 8px; /* Reduced padding */
-            background-color: #dc3545;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px; /* Reduced font size */
-            transition: background-color 0.3s, transform 0.2s;
-        }
-        .attack-btn:hover {
-            background-color: #c82333;
-            transform: scale(1.05);
-        }
-        .contact-link {
+
+        h1 {
+            color: var(--heading-color);
             display: block;
+            text-align: center;
+            margin: 25px 25px 0 25px;
+            padding: 25px 25px 0 25px;
+            font-size: 60px;
+        }
+
+        .main {
+            height: 500px;
+            width: 900px;
+            background-color: var(--box-background);
+            display: block;
+            margin: 0 auto;
+            margin-top: 6%;
+            box-shadow: 0 4px 15px 0 var(--shadow-color);
+            border-radius: 10px;
+            color: var(--text-color);
+        }
+
+        .main input {
+            height: 45px;
+            width: 70%;
+            display: block;
+            margin: 0 auto;
+            outline: none;
+            text-decoration: none;
+            font-size: var(--font-size);
+            font-weight: bold;
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            border-color: var(--border-color);
+            margin-top: 15px;
+            color: cyan;
+            background: transparent;
+        }
+
+        .main label {
+            position: relative;
+            left: 15%;
+            top: 57px;
+            font-size: 25px;
+            color: var(--text-color);
+            pointer-events: none;
+            transition: 0.5s;
+        }
+
+        .main .submit {
+            height: 50px;
+            width: 250px;
+            display: block;
+            margin: 0 auto;
             margin-top: 20px;
-            color: #00bfff;
+        }
+
+        .main .submit div {
+            position: relative;
+            display: inline-block;
+            padding: 15px 50px;
+            color: #03e9f4;
+            font-size: 20px;
+            text-decoration: none;
+            text-transform: uppercase;
+            overflow: hidden;
+            transition: .5s;
+            margin-top: 40px;
+            letter-spacing: 4px;
+            cursor: pointer;
+        }
+
+        .container footer span {
+            color: var(--text-color);
+            display: block;
+            margin-top: 50px;
+        }
+
+        .container footer span a {
+            color: var(--text-color);
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s;
         }
-        .contact-link:hover {
-            color: #0099cc;
-            text-decoration: underline;
-        }
-        .footer {
-            margin-top: 20px;
-            font-size: 14px;
-            color: #00bfff;
-        }
-        .success-message {
-            margin-top: 20px;
-            font-size: 18px;
-            color: #00ff00; /* Success message color */
+
+        .main .submit div:hover {
+            background: #03e9f4;
+            color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 5px var(--button-hover),
+                        0 0 5px var(--button-hover),
+                        0 0 10px var(--button-hover),
+                        0 0 40px var(--button-hover);
         }
     </style>
 </head>
-<body>
-    <div class="form-container">
-        <h2>RS BOMBER</h2>
-        <div class="form-group">
-            <input type="text" id="phoneNumber" placeholder="Number">
+<body> 
+    <div class="container">
+        <div class="main">
+            <h1 class="text">RS BOMBER</h1>
+            <label class="number_text">Number</label>
+            <input type="number" maxlength="11" minlength="11" id="phone">
+            <label class="amount_text">Amount</label>
+            <input type="number" id="amount">
+            <div class="submit">
+                <center>
+                <div id="submit" onclick="sendRequest()">
+                    ATTACK 
+                </div>
+                </center>
+            </div>
         </div>
-        <div class="form-group">
-            <input type="number" id="amount" placeholder="Amount">
-        </div>
-        <button class="attack-btn" onclick="sendRequests()">ATTACK</button>
-        <div class="success-message" id="successMessage"></div> <!-- Added success message div -->
-        <a href="https://www.facebook.com/AlpHaRisHaD.33" class="contact-link">Contact Site Owner</a> <!-- Updated link to Facebook -->
-        <div class="footer">Made By Sabuj💚</div>
+        <footer>
+            <center>
+            <span>Contact Site Owner 👉 <a href="https://www.facebook.com/AlpHaRisHaD.33">CLICK</a></span>
+            </center>
+        </footer>
     </div>
 
     <script>
-        async function sendRequests() {
-            const phoneNumber = document.getElementById('phoneNumber').value;
+        function sendRequest() {
+            const phone = document.getElementById('phone').value;
             const amount = document.getElementById('amount').value;
-            const successMessage = document.getElementById('successMessage');
 
-            if (!phoneNumber || !amount) {
-                alert('Enter both fields.');
-                return;
+            if (phone.length === 11) {
+                const url = `https://pickye.onrender.com?number=${phone}&amount=${amount}`;
+                fetch(url)
+                    .then(response => response.json())
+                    .then(data => {
+                        alert('Request sent successfully!');
+                        console.log(data);
+                    })
+                    .catch(error => {
+                        alert('Error sending request: ' + error);
+                    });
+            } else {
+                alert('Please enter a valid 11-digit phone number.');
             }
-
-            const url = `https://pickye.onrender.com?number=${phoneNumber}`;
-            let successCount = 0;
-
-            for (let i = 0; i < amount; i++) {
-                try {
-                    const response = await fetch(url);
-                    const data = await response.json();
-                    if (data && data.status === "SUCCESSFUL") {
-                        successCount++;
-                    }
-                } catch (error) {
-                    console.error('Error:', error);
-                }
-            }
-
-            successMessage.textContent = `Successful requests: ${successCount}/${amount}`; // Display success message
         }
     </script>
 </body>
